import UIKit
import NVActivityIndicatorView

class HiraganaConvertViewController: UIViewController {
    var textView: UITextView!
    var clearButton: UIButton!
    var convertButton: UIButton!
    var indicator: NVActivityIndicatorView!

    var presenter: HiraganaConvertPresenterInput!
    
    func inject(presenter: HiraganaConvertPresenterInput) {
        self.presenter = presenter
...
