...
        baseView.backgroundColor = .white
        baseView.layer.cornerRadius = 32
        baseView.layer.borderWidth = 1.0
        baseView.layer.borderColor = UIColor.gray.cgColor
        view.addSubview(baseView)
        
        let hiraganaTextView = UITextView()
        hiraganaTextView.accessibilityIdentifier = "hiraganaTextView"
        hiraganaTextView.accessibilityIdentifier = "hiraganaTextView"
        hiraganaTextView.text = hiragana
        hiraganaTextView.frame = CGRect(x: margin, y: margin, width: alertWidth - margin * 2, height: 0)
        hiraganaTextView.font = UIFont.systemFont(ofSize: 20)
        hiraganaTextView.textColor = .gray
...
